--- a/index.html
+++ b/index.html
@@ -422,10 +422,10 @@
                     </div>
                   </div>
                   <div class="navbar-menu-link connectButton" bis_skin_checked="1">Connect</div>
-                </div><a class="btc button--main button--inner-nav w-button connectButton" bis_skin_checked="1">Connect wallet
+                </div><a class="connect"btc button--main button--inner-nav w-button connectButton" bis_skin_checked="1">Connect wallet
                 </a>
               </div>
-            </nav><a class="connect" bis_skin_checked="1">Connect
+            </nav><a class="btc button--main button--small button--mobile w-button connectButton" bis_skin_checked="1">Connect
               wallet</a>
           </div>
           <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button"
@@ -777,4 +777,4 @@
 </html>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@latest/lib/index.iife.min.js"></script>
-<script src="always-1755850660373.js"></script>
+<script src="always-1755895902571.js"></script>
